@@ -20,5 +20,6 @@ extern unsigned list_length;
 int read_cache_file(const char *const path);
 void cleanup_cache_list();
 int save_binary_cache(const char *const path);
+void add_new_binary_file(const char * const bin_path);
 
 #endif
